<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/thermID"
        android:layout_width="255dp"
        android:layout_height="235dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:contentDescription="@string/myThermometer"
        app:srcCompat="@drawable/mythemometer" />

    <TextView
        android:id="@+id/descID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:text="@string/enterNumDesc"
        android:textStyle="bold"
        tools:text="Did you know you can determine the temperature outside by counting the number of chirps a cricket makes? Just count the number of chirps it makes in 14 seconds and enter the number below!" />

    <EditText
        android:id="@+id/numID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/enterNumHint"
        android:importantForAutofill="no"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/submitID"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/calcTempF"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/submitID2"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:background="@color/colorPrimary"
            android:elevation="0dp"
            android:text="@string/calcTempC"
            android:textColor="@color/textColor"
            android:textStyle="bold"
            android:layout_weight="1"/>


    </LinearLayout>






    <TextView
        android:id="@+id/tvResults"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:text="@string/tvResults"
        android:textStyle="bold" />


</LinearLayout>